deployment/employee-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-management-app
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  namespace: default
  labels:
    app: employee-management-app
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    name: http 
  selector:
    app: employee-management-app
