deployment/employee-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-management-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx 
  rules:
  - host: thilak1.com
    http:
      paths:
      - path: /api/v1.0/employees
        pathType: Prefix
        backend:
          service:
            name: employee-management-app
            port:
              number: 8000
