deployment/employee_managment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-management-app
  labels:
    app: employee-management-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-management-app
  template:
    metadata:
      labels:
        app: employee-management-app
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "employee-management-app"
        dapr.io/app-port: "8000"
        dapr.io/config: "daprconfig"
    spec:
      containers:
      - name: employee-management-app
      #  image: clootrackneo.azurecr.io/neo/employee_management:latest
        image: clootrackdevciacr01.azurecr.io/k8sdemo:latest
        ports:
        - containerPort: 8000
        imagePullPolicy: Always
        
  ---
apiVersion: v1
kind: Service
metadata:
  name: employee-management-app
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  namespace: default
  labels:
    app: employee-management-app
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    name: http 
  selector:
    app: employee-management-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-management-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx 
  rules:
  - host: rishi.raaonezone.com
    http:
      paths:
      - path: /api/v1.0/employees
        pathType: Prefix
        backend:
          service:
            name: employee-management-app
            port:
              number: 8000
